meta-digi: use global variable to use internal git repos
https://jira.digi.com/browse/DEL-472

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccimx51js/local.conf.sample
+++ b/sdk/config/ccimx51js/local.conf.sample
@@ -54,6 +54,11 @@ MACHINE = "ccimx51js"
 MACHINE_VARIANT = "wagv"
 
 #
+# Use Digi's internal git repositories
+#
+#DIGI_INTERNAL_GIT ?= "1"
+
+#
 # Where to place downloads
 #
 # During a first build the system will download many different source code tarballs
