--- a/sdk/config/ccimx53js/local.conf.sample
+++ b/sdk/config/ccimx53js/local.conf.sample
@@ -54,6 +54,11 @@ MACHINE = "ccimx53js"
 MACHINE_VARIANT = "w"
 
 #
+# Use Digi's internal git repositories
+#
+#DIGI_INTERNAL_GIT ?= "1"
+
+#
 # Where to place downloads
 #
 # During a first build the system will download many different source code tarballs
