meta-digi-arm: Change DIGI_MIRROR to final FTP URL.
This is the FTP site where the release artifacts will be placed. It's
structure will be something like:

x.y.z/
	source
	images
	toolchains
	adt-installer

https://jira.digi.com/browse/DEL-473

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -20,7 +20,7 @@ DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
 DIGI_MTK_GIT ?= "git://git.digi.com/"
-DIGI_MIRROR  ?= "http://build-linux.digi.com/yocto/source"
+DIGI_MIRROR  ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
 DIGI_GITHUB_GIT ?= "git://github.com/dgii"
 
