meta-digi: use global variable for github url
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -22,5 +22,7 @@ DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
 DIGI_MTK_GIT ?= "git://git.digi.com/"
 DIGI_MIRROR  ?= "http://build-linux.digi.com/yocto/source"
 
+DIGI_GITHUB_GIT ?= "git://github.com/dgii"
+
 # Accept FSL licenses
 ACCEPT_FSL_EULA = "1"
