dey: Change version to 1.3.0.
https://jira.digi.com/browse/DEL-512

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,9 +1,9 @@
 DISTRO = "dey"
 SDK_DISTRO = "poky"
 DISTRO_NAME = "Digi Embedded for Yocto"
-DISTRO_VERSION = "1.3.2"
+DISTRO_VERSION = "1.3.0"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "${DISTRO_VERSION}"
+SDK_VERSION := "1.3.2"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
