meta-digi-dey: Add oracle-java for mxs and mx5 platforms.
https://jira.digi.com/browse/DEL-532

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -65,6 +65,9 @@ QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
 # Some packages like gst-plugins-ugly need this
 LICENSE_FLAGS_WHITELIST += "commercial"
 
+# The oracle java JRE needs this
+LICENSE_FLAGS_WHITELIST += "oracle_java"
+
 PREMIRRORS ?= "\
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
