meta-digi-del: Add ttyAMA0 to mdev.
This is the serial name in the 3.x kernels for the ccardimx28js.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dey/recipes-core/busybox/busybox-1.20.2/mdev.conf
+++ b/meta-digi-dey/recipes-core/busybox/busybox-1.20.2/mdev.conf
@@ -7,6 +7,7 @@ ttyNS([0-9]) 0:0 0660 >ttyS%1
 ttySAC([0-9]) 0:0 0660 >ttyS%1
 ttymxc([0-9]) 0:0 0660 >ttyS%1
 ttyAM0 0:0 0660 >ttyS0
+ttyAMA0 0:0 0660 >ttyS0
 ttySP0 0:0 0660 >ttyBt
 ttySP([1-9]) 0:0 0660 >ttyS%1
 
