--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,9 +1,10 @@
 DISTRO = "dey"
-SDK_DISTRO = "poky"
 DISTRO_NAME = "Digi Embedded for Yocto"
-DISTRO_VERSION = "1.3.0"
+DISTRO_VERSION = "1.4.0"
+DISTRO_CODENAME = "dylan"
+SDK_DISTRO = "poky"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.3.2"
+SDK_VERSION := "1.4.0"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -68,7 +69,7 @@ LICENSE_FLAGS_WHITELIST += "commercial"
 # The oracle java JRE needs this
 LICENSE_FLAGS_WHITELIST += "oracle_java"
 
-PREMIRRORS ?= "\
+PREMIRRORS ??= "\
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
@@ -98,27 +99,30 @@ CONNECTIVITY_CHECK_URIS ?= " \
              http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
-            Yocto (Built by Poky 7.0) 1.2 \n \
-            Yocto (Built by Poky 8.0) 1.3 \n \
-            Poky 7.0 (Yocto Project 1.2 Reference Distro) 1.2 \n \
-            Poky 8.0 (Yocto Project 1.3 Reference Distro) 1.3 \n \
-            Ubuntu 10.04.4 LTS \n \
-            Ubuntu 11.10 \n \
-            Ubuntu 12.04 LTS \n \
-            Ubuntu 12.04.1 LTS \n \
-            Ubuntu 12.04.2 LTS \n \
-            Ubuntu 12.10 \n \
-            Fedora release 16 (Verne) \n \
-            Fedora release 17 (Beefy Miracle) \n \
-            Fedora release 18 (Spherical Cow) \n \
-            CentOS release 5.6 (Final) \n \
-            CentOS release 5.7 (Final) \n \
-            CentOS release 5.8 (Final) \n \
-            CentOS release 6.3 (Final) \n \
-            Debian GNU/Linux 6.0.6 (squeeze) \n \
-            openSUSE 11.4 \n \
-            openSUSE 12.1 \n \
-            openSUSE 12.2 \n \
+            Yocto-1.3 \n \
+            Yocto-1.2 \n \
+            Poky-1.2 \n \
+            Poky-1.3 \n \
+            Poky-1.4 \n \
+            Poky-1.4.1 \n \
+            Ubuntu-10.04 \n \
+            Ubuntu-11.10 \n \
+            Ubuntu-12.04 \n \
+            Ubuntu-12.10 \n \
+            Fedora-16 \n \
+            Fedora-17 \n \
+            Fedora-18 \n \
+            CentOS-5.6 \n \
+            CentOS-5.7 \n \
+            CentOS-5.8 \n \
+            CentOS-6.3 \n \
+            CentOS-6.4 \n \
+            Debian-6.0 \n \
+            Debian-7.0 \n \
+            SUSE-LINUX-11.4 \n \
+            SUSE-LINUX-12.1 \n \
+            SUSE-LINUX-12.2 \n \
+            openSUSE-project-12.3 \n \
 	    "
 
 # Default hash policy for distro
@@ -135,8 +139,10 @@ OELAYOUT_ABI = "8"
 INHERIT += "poky-sanity"
 
 #WARN_QA = "unsafe-references-in-binaries unsafe-references-in-scripts"
-WARN_QA = ""
+WARN_QA = "textrel pkgvarcheck"
 ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms useless-rpaths rpaths staticdev ldflags"
+
+include conf/distro/include/seperatebuilddir.inc
 
 # Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
 BBMASK  = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
