meta-digi: fix atheros recipes for new linux version
With the old version of the kernel (2.6.35) we build an external atheros
kernel module, while with the new kernel (3.10) the atheros driver is
included with the kernel sources.

However, the new driver needs the firmware files and the driver load
scripts that are stored with the old driver.

So put a dependence on kernel-module-atheros regardless of the kernel
version and then rework the kernel-module-atheros recipe to build the
whole driver for the old kernel or only the firmware for the new kernel.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/recipes-kernel/kernel-module-atheros/kernel-module-atheros/Makefile
+++ b/meta-digi-arm/recipes-kernel/kernel-module-atheros/kernel-module-atheros/Makefile
@@ -44,14 +44,18 @@ endif
 SRC := $(shell pwd)
 
 all:
+ifeq ($(ATH_ONLY_INSTALL_FW),)
 	$(MAKE) -C $(KERNEL_SRC) M=$(SRC)
+endif
 
 modules_install:
+ifeq ($(ATH_ONLY_INSTALL_FW),)
 	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) modules_install
 	# Fix installation directory of the modules.
 	find $(INSTALL_MOD_PATH)/lib/modules/$(KERNEL_VERSION)/extra/$(ATH_DRV_BASEDIR) -type f -name '*.ko' | \
 		xargs -I modfile mv -f modfile $(INSTALL_MOD_PATH)/lib/modules/$(KERNEL_VERSION)/extra/
 	rm -rf $(INSTALL_MOD_PATH)/lib/modules/*/extra/$(ATH_DRV_BASEDIR)
+endif
 	# Install firmware
 	mkdir -p $(INSTALL_MOD_PATH)/lib/firmware/ath6k/AR6003/hw2.1.1/
 	install -m 0644 $(FIRMWARE) $(INSTALL_MOD_PATH)/lib/firmware/ath6k/AR6003/hw2.1.1/
