meta-digi-dey: mdev, udev: Add serial and bluetooth devices.
https://jira.digi.com/browse/DEL-572

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dey/recipes-core/busybox/busybox-1.20.2/mdev.conf
+++ b/meta-digi-dey/recipes-core/busybox/busybox-1.20.2/mdev.conf
@@ -10,6 +10,8 @@ ttyAM0 0:0 0660 >ttyS0
 ttyAMA0 0:0 0660 >ttyS0
 ttySP0 0:0 0660 >ttyBt
 ttySP([1-9]) 0:0 0660 >ttyS%1
+ttyAPP0 0:0 0660 >ttyBt
+ttyAPP([1-9]) 0:0 0660 >ttyS%1
 
 # old Samsung serial port name (for backwards compatibility)
 s3c2410_serial([0-9]) 0:0 0660 >ttyS%1
