meta-digi: add IS_KERNEL_2X variable to be used in recipes
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -5,6 +5,5 @@
 include conf/machine/include/ccardimx28.inc
 
 DTSNAME = "imx28-${MACHINE}"
-SERIAL_CONSOLE_DEVICE = '${@base_version_less_or_equal("PREFERRED_VERSION_linux-dey", "2.6.35.14", "ttyAM0", "ttyAMA0", d)}'
+SERIAL_CONSOLE_DEVICE = "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 SERIAL_CONSOLE = "115200 ${SERIAL_CONSOLE_DEVICE}"
-
