--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -19,7 +19,7 @@ DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
-DIGI_MTK_GIT ?= "git://git.digi.com/"
+DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_MIRROR  ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
 DIGI_GITHUB_GIT ?= "git://github.com/dgii"
