meta-digi: add wmiconfig package for MXS
wmiconfig is Atheros proprietary code so the recipe builds from source
if DIGI_INTERNAL_GIT is defined or uses a prebuilt binary otherwise.

https://jira.digi.com/browse/DEL-640

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -7,3 +7,6 @@ include conf/machine/include/ccardimx28.inc
 DTSNAME = "imx28-${MACHINE}"
 SERIAL_CONSOLE_DEVICE = "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 SERIAL_CONSOLE = "115200 ${SERIAL_CONSOLE_DEVICE}"
+
+# Use our wmiconfig instead of the one in meta-oe
+PREFERRED_VERSION_wmiconfig ?= "3.4p4"
