--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -5,8 +5,10 @@
 include conf/machine/include/ccardimx28.inc
 
 DTSNAME = "imx28-${MACHINE}"
-SERIAL_CONSOLE_DEVICE = "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
-SERIAL_CONSOLE = "115200 ${SERIAL_CONSOLE_DEVICE}"
+
+# Use standard serial port name and let device handlers (mdev, udev)
+# create a symlink to the correct device.
+SERIAL_CONSOLE = "115200 ttyS0"
 
 # Use our wmiconfig instead of the one in meta-oe
 PREFERRED_VERSION_wmiconfig ?= "3.4p4"
