--- a/meta-digi-dey/recipes-core/busybox/busybox-1.20.2/mdev.conf
+++ b/meta-digi-dey/recipes-core/busybox/busybox-1.20.2/mdev.conf
@@ -6,12 +6,10 @@ mmcblk[0-9]+p[0-9]+ 0:0 0660 */lib/mdev/mmc
 ttyNS([0-9]) 0:0 0660 >ttyS%1
 ttySAC([0-9]) 0:0 0660 >ttyS%1
 ttymxc([0-9]) 0:0 0660 >ttyS%1
-ttyAM0 0:0 0660 >ttyS0
-ttyAMA0 0:0 0660 >ttyS0
-ttySP0 0:0 0660 >ttyBt
-ttySP([1-9]) 0:0 0660 >ttyS%1
-ttyAPP0 0:0 0660 >ttyBt
-ttyAPP([1-9]) 0:0 0660 >ttyS%1
+ttyAMA?0      0:0 0660 @ln -s ${MDEV} ttyS0
+tty(SP|APP)0  0:0 0660 @ln -s ${MDEV} ttyBt
+ttyAPP([1-9]) 0:0 0660 @ln -s ${MDEV} ${MDEV/APP/S}
+ttySP([1-9])  0:0 0660 @ln -s ${MDEV} ${MDEV/SP/S}
 
 # old Samsung serial port name (for backwards compatibility)
 s3c2410_serial([0-9]) 0:0 0660 >ttyS%1
