meta-digi: complete variants support for device trees
Also change the default ccardimx28js variant to 'web1' (wireless, second
ethernet, bluetooth and 1-wire)

https://jira.digi.com/browse/DEL-819

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccardimx28js/local.conf.sample
+++ b/sdk/config/ccardimx28js/local.conf.sample
@@ -51,7 +51,7 @@
 #MACHINE ??= "qemux86"
 
 MACHINE = "ccardimx28js"
-MACHINE_VARIANT = "wb"
+MACHINE_VARIANT = "web1"
 
 #
 # Use Digi's internal git repositories
