--- a/meta-digi-arm/conf/machine/cpx2.conf
+++ b/meta-digi-arm/conf/machine/cpx2.conf
@@ -4,7 +4,7 @@
 
 include conf/machine/include/mxs-digi-base.inc
 
-SOC_FAMILY = "mxs"
+SOC_FAMILY = "mxs:mx28"
 
 UBOOT_ENTRYPOINT  = "0x41008000"
 UBOOT_LOADADDRESS = "0x41008000"
