meta-digi-dey: remove not needed BBMASK
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -147,7 +147,6 @@ ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms u
 
 include conf/distro/include/seperatebuilddir.inc
 
-# Mask openembedded core gst-ffmpeg recipe because it adds a dependency on libav (libgl, libx11)
-BBMASK  = "meta-openembedded/meta-oe/recipes-multimedia/gstreamer/gst-ffmpeg_0.10.13.bbappend"
-BBMASK .= "${@base_contains('DISTRO_FEATURES', 'x11', '', '|.*amd-gpu-x11-bin-mx51_.*bb', d)}"
-BBMASK .= "|meta-fsl-arm/recipes-kernel/linux/linux-imx_2.6.35.3.bb"
+# Mask unused kernel recipes from "meta-fsl-arm" to clean warning
+# WARNING: Unable to get checksum for linux-imx SRC_URI entry defconfig
+BBMASK = "meta-fsl-arm/recipes-kernel/linux/"
