--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -24,6 +24,16 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DE
 DISTRO_FEATURES_DEFAULT_remove = "x11"
 POKY_DEFAULT_DISTRO_FEATURES_remove = "wayland"
 
+# DEY image features (alphabetical order)
+PACKAGE_GROUP_dey-audio = "packagegroup-dey-audio"
+PACKAGE_GROUP_dey-bluetooth = "packagegroup-dey-bluetooth"
+PACKAGE_GROUP_dey-debug = "packagegroup-dey-debug"
+PACKAGE_GROUP_dey-examples = "packagegroup-dey-examples"
+PACKAGE_GROUP_dey-gstreamer = "packagegroup-dey-gstreamer"
+PACKAGE_GROUP_dey-network = "packagegroup-dey-network"
+PACKAGE_GROUP_dey-qt = "packagegroup-dey-qt"
+PACKAGE_GROUP_dey-wireless = "packagegroup-dey-wireless"
+
 # Features without a packagegroup need to be explicitely added.
 IMAGE_FEATURES[validitems] += "dey-test"
 
