--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -24,6 +24,9 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DE
 DISTRO_FEATURES_DEFAULT_remove = "x11"
 POKY_DEFAULT_DISTRO_FEATURES_remove = "wayland"
 
+# Features without a packagegroup need to be explicitely added.
+IMAGE_FEATURES[validitems] += "dey-test"
+
 # Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
 # architecture.  For armv7a devices libjpeg-turbo should be used to take
 # advantage of the SIMD instructions.
