meta-digi-arm: image_types_digi: separate data from implementation
Move the flash parameters to the machine configuration files so it's
easier to create derivative machines and use the image bbclass to create
flash images.

(based on a patch from Seth Bollinger <sethb@digi.com>)

https://jira.digi.com/browse/DEL-682

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -12,3 +12,20 @@ SERIAL_CONSOLE = "115200 ttyS0"
 
 # Use our wmiconfig instead of the one in meta-oe
 PREFERRED_VERSION_wmiconfig ?= "3.4p4"
+
+#################################################
+## Flash parameters for JFFS2 and UBIFS images ##
+#################################################
+#   partition size (KiB)
+#   physical eraseblock size (KiB)
+#   logical eraseblock size (bytes)
+#   minimum input/output size (bytes)
+#   sub-page size (bytes)
+#
+# PEB, LEB, MIO and SUB might be a list of comma-separated values
+#
+FLASH_PSZ = "262144"
+FLASH_PEB = "128"
+FLASH_LEB = "126976"
+FLASH_MIO = "2048"
+FLASH_SUB = "-"
