--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -6,3 +6,19 @@ include conf/machine/include/ccimx51.inc
 
 SERIAL_CONSOLE = "38400 ttymxc1"
 
+#################################################
+## Flash parameters for JFFS2 and UBIFS images ##
+#################################################
+#   partition size (KiB)
+#   physical eraseblock size (KiB)
+#   logical eraseblock size (bytes)
+#   minimum input/output size (bytes)
+#   sub-page size (bytes)
+#
+# PEB, LEB, MIO and SUB might be a list of comma-separated values
+#
+FLASH_PSZ = "524288"
+FLASH_PEB = "128,512"
+FLASH_LEB = "129024,520192"
+FLASH_MIO = "2048,4096"
+FLASH_SUB = "512,1024"
