imx-bootlets: move BOARD selection to the machine config
Move the BOARD selection out of the bootlets recipe so it can be used
from machines defined in other layers.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -4,6 +4,8 @@
 
 include conf/machine/include/ccardimx28.inc
 
+IMXBOOTLETS_MACHINE = "CCARDIMX28JS"
+
 DTSNAME = "imx28-${MACHINE}"
 
 # Use standard serial port name and let device handlers (mdev, udev)
