--- a/meta-digi-arm/conf/machine/wr21.conf
+++ b/meta-digi-arm/conf/machine/wr21.conf
@@ -6,6 +6,8 @@ include conf/machine/include/mxs-digi-base.inc
 
 SOC_FAMILY = "mxs:mx28"
 
+IMXBOOTLETS_MACHINE = "WR21"
+
 UBOOT_ENTRYPOINT  = "0x41008000"
 UBOOT_LOADADDRESS = "0x41008000"
 
