meta-digi-dey: update distro config files
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,10 +1,10 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded for Yocto"
-DISTRO_VERSION = "1.4.0"
-DISTRO_CODENAME = "dylan"
+DISTRO_VERSION = "1.5.0"
+DISTRO_CODENAME = "dora"
 SDK_DISTRO = "poky"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.4.0"
+SDK_VERSION := "1.5.0"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -13,37 +13,35 @@ TARGET_VENDOR = "-dey"
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
-# Comment out features to leave them out
-DISTRO_FEATURES = "alsa"
-DISTRO_FEATURES += "ext2"
-DISTRO_FEATURES += "usbgadget"
-DISTRO_FEATURES += "usbhost"
-DISTRO_FEATURES += "nfs"
-DISTRO_FEATURES += "${DISTRO_FEATURES_LIBC}"
-DISTRO_FEATURES += "largefile"
-DISTRO_FEATURES += "opengl"
-DISTRO_FEATURES += "wifi"
-DISTRO_FEATURES += "accel-video"
-DISTRO_FEATURES += "accel-graphics"
-DISTRO_FEATURES += "accelerometer"
-DISTRO_FEATURES += "ext-eth"
+# Override these in poky based distros
+POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl multiarch wayland"
+POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
+POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
-PREFERRED_PROVIDER_jpeg = "jpeg"
+DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.4%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.4%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.4%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "3.4%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.4%"
+# Remove X-related features for DEY distro
+DISTRO_FEATURES_DEFAULT_remove = "x11"
+POKY_DEFAULT_DISTRO_FEATURES_remove = "wayland"
 
-SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${TARGET_ARCH}"
+# Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
+# architecture.  For armv7a devices libjpeg-turbo should be used to take
+# advantage of the SIMD instructions.
+PREFERRED_PROVIDER_jpeg ?= "jpeg"
+PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
+
+PREFERRED_VERSION_linux-yocto ?= "3.10%"
+PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.10%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.10%"
+PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.10%"
+PREFERRED_VERSION_linux-yocto_qemumips ?= "3.10%"
+PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.10%"
+PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.10%"
+
+SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${SDK_DISTRO}/${SDK_VERSION}"
 
 EXTRAOPKGCONFIG = "poky-feed-config-opkg"
-
-# Override these in poky based distros to modify DISTRO_EXTRA_R*
-POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
-POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
@@ -96,31 +94,20 @@ CONNECTIVITY_CHECK_URIS ?= " \
              http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
-            Yocto-1.3 \n \
-            Yocto-1.2 \n \
-            Poky-1.2 \n \
-            Poky-1.3 \n \
             Poky-1.4 \n \
-            Poky-1.4.1 \n \
-            Ubuntu-10.04 \n \
-            Ubuntu-11.10 \n \
+            Poky-1.5 \n \
             Ubuntu-12.04 \n \
             Ubuntu-12.10 \n \
-            Fedora-16 \n \
-            Fedora-17 \n \
+            Ubuntu-13.04 \n \
             Fedora-18 \n \
-            CentOS-5.6 \n \
-            CentOS-5.7 \n \
-            CentOS-5.8 \n \
-            CentOS-6.3 \n \
+            Fedora-19 \n \
             CentOS-6.4 \n \
-            Debian-6.0 \n \
+            Debian-6.0.7 \n \
             Debian-7.0 \n \
-            SUSE-LINUX-11.4 \n \
-            SUSE-LINUX-12.1 \n \
+            Debian-7.1 \n \
             SUSE-LINUX-12.2 \n \
             openSUSE-project-12.3 \n \
-	    "
+            "
 
 # Default hash policy for distro
 BB_SIGNATURE_HANDLER ?= 'OEBasicHash'
@@ -135,9 +122,13 @@ OELAYOUT_ABI = "8"
 # add poky sanity bbclass
 INHERIT += "poky-sanity"
 
-#WARN_QA = "unsafe-references-in-binaries unsafe-references-in-scripts"
-WARN_QA = "textrel pkgvarcheck"
-ERROR_QA = "dev-so debug-deps dev-deps debug-files arch la2 pkgconfig la perms useless-rpaths rpaths staticdev ldflags"
+# QA check settings - a little stricter than the OE-Core defaults
+WARN_QA = "textrel files-invalid incompatible-license xorg-driver-abi libdir"
+ERROR_QA = "dev-so debug-deps dev-deps debug-files arch pkgconfig la perms \
+            useless-rpaths rpaths staticdev ldflags pkgvarcheck already-stripped \
+            compile-host-path dep-cmp installed-vs-shipped install-host-path \
+            packages-list perm-config perm-line perm-link pkgv-undefined \
+            pn-overrides split-strip var-undefined version-going-backwards"
 
 include conf/distro/include/seperatebuilddir.inc
 
