meta-digi-arm: rework device tree customization
The do_update_dts function was hardcoded for ccardimx28js. We need to
make it mxs specific so the recipe can be used for other platforms that
do not share the same device tree configuration (for example the
upcoming ccimx6js)

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -6,7 +6,7 @@ include conf/machine/include/ccardimx28.inc
 
 IMXBOOTLETS_MACHINE = "CCARDIMX28JS"
 
-DTSNAME = "imx28-${MACHINE}"
+KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 
 # Use standard serial port name and let device handlers (mdev, udev)
 # create a symlink to the correct device.
