meta-digi: use SERIAL_CONSOLES instead of SERIAL_CONSOLE
SERIAL_CONSOLE variable has been deprecated in poky. The new
SERIAL_CONSOLES allows to configure multiple devices.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -10,7 +10,7 @@ KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 
 # Use standard serial port name and let device handlers (mdev, udev)
 # create a symlink to the correct device.
-SERIAL_CONSOLE = "115200 ttyS0"
+SERIAL_CONSOLES = "115200;ttyS0"
 
 # Use our wmiconfig instead of the one in meta-oe
 PREFERRED_VERSION_wmiconfig ?= "3.4p4"
