--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -4,7 +4,7 @@
 
 include conf/machine/include/ccimx51.inc
 
-SERIAL_CONSOLE = "38400 ttymxc1"
+SERIAL_CONSOLES = "38400;ttymxc1"
 
 #################################################
 ## Flash parameters for JFFS2 and UBIFS images ##
