--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -5,7 +5,7 @@
 # Contains the ConnectCore for MX53 module.
 include conf/machine/include/ccimx53.inc
 
-SERIAL_CONSOLE = "115200 ttymxc0"
+SERIAL_CONSOLES = "115200;ttymxc0"
 
 #################################################
 ## Flash parameters for JFFS2 and UBIFS images ##
