meta-digi-arm: implement 'boot.vfat' image type
At the moment this image is a VFAT file system containing the kernel
and the device tree blobs.

https://jira.digi.com/browse/DEL-932

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6adpt.conf
+++ b/meta-digi-arm/conf/machine/ccimx6adpt.conf
@@ -8,3 +8,11 @@ include conf/machine/include/ccimx6.inc
 KERNEL_DEVICETREE = "imx6-${MACHINE}.dtb imx6-${MACHINE}-ldo.dtb imx6-${MACHINE}-hdcp.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc0"
+
+#
+# Partition sizes
+# ---------------
+# boot:    64 MiB
+# system: 512 MiB
+#
+BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
