meta-digi-dey: rename PACKAGE_GROUP variable to FEATURE_PACKAGES
Clean bitbake warning:
WARNING: PACKAGE_GROUP is deprecated, please use FEATURE_PACKAGES instead

https://jira.digi.com/browse/DEL-996

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -25,14 +25,14 @@ DISTRO_FEATURES_DEFAULT_remove = "x11"
 POKY_DEFAULT_DISTRO_FEATURES_remove = "wayland"
 
 # DEY image features (alphabetical order)
-PACKAGE_GROUP_dey-audio = "packagegroup-dey-audio"
-PACKAGE_GROUP_dey-bluetooth = "packagegroup-dey-bluetooth"
-PACKAGE_GROUP_dey-debug = "packagegroup-dey-debug"
-PACKAGE_GROUP_dey-examples = "packagegroup-dey-examples"
-PACKAGE_GROUP_dey-gstreamer = "packagegroup-dey-gstreamer"
-PACKAGE_GROUP_dey-network = "packagegroup-dey-network"
-PACKAGE_GROUP_dey-qt = "packagegroup-dey-qt"
-PACKAGE_GROUP_dey-wireless = "packagegroup-dey-wireless"
+FEATURE_PACKAGES_dey-audio = "packagegroup-dey-audio"
+FEATURE_PACKAGES_dey-bluetooth = "packagegroup-dey-bluetooth"
+FEATURE_PACKAGES_dey-debug = "packagegroup-dey-debug"
+FEATURE_PACKAGES_dey-examples = "packagegroup-dey-examples"
+FEATURE_PACKAGES_dey-gstreamer = "packagegroup-dey-gstreamer"
+FEATURE_PACKAGES_dey-network = "packagegroup-dey-network"
+FEATURE_PACKAGES_dey-qt = "packagegroup-dey-qt"
+FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 
 # Features without a packagegroup need to be explicitely added.
 IMAGE_FEATURES[validitems] += "dey-test"
