--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,10 +1,10 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded for Yocto"
-DISTRO_VERSION = "1.5.0"
-DISTRO_CODENAME = "dora"
+DISTRO_VERSION = "1.6.0"
+DISTRO_CODENAME = "next"
 SDK_DISTRO = "poky"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.5.0"
+SDK_VERSION := "1.6.0"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -14,7 +14,7 @@ LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
 # Override these in poky based distros
-POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl multiarch wayland"
+POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
@@ -112,12 +112,17 @@ SANITY_TESTED_DISTROS ?= " \
             Ubuntu-12.04 \n \
             Ubuntu-12.10 \n \
             Ubuntu-13.04 \n \
+            Ubuntu-13.10 \n \
             Fedora-18 \n \
             Fedora-19 \n \
+            Fedora-20 \n \
             CentOS-6.4 \n \
-            Debian-6.0.7 \n \
+            CentOS-6.5 \n \
             Debian-7.0 \n \
             Debian-7.1 \n \
+            Debian-7.2 \n \
+            Debian-7.3 \n \
+            Debian-7.4 \n \
             SUSE-LINUX-12.2 \n \
             openSUSE-project-12.3 \n \
             "
@@ -136,14 +141,13 @@ OELAYOUT_ABI = "8"
 INHERIT += "poky-sanity"
 
 # QA check settings - a little stricter than the OE-Core defaults
-WARN_QA = "textrel files-invalid incompatible-license xorg-driver-abi libdir"
+WARN_QA = "textrel files-invalid incompatible-license xorg-driver-abi libdir \
+           unknown-configure-option"
 ERROR_QA = "dev-so debug-deps dev-deps debug-files arch pkgconfig la perms \
             useless-rpaths rpaths staticdev ldflags pkgvarcheck already-stripped \
             compile-host-path dep-cmp installed-vs-shipped install-host-path \
             packages-list perm-config perm-line perm-link pkgv-undefined \
             pn-overrides split-strip var-undefined version-going-backwards"
-
-include conf/distro/include/seperatebuilddir.inc
 
 # Mask unused kernel recipes from "meta-fsl-arm" to clean warning
 # WARNING: Unable to get checksum for linux-imx SRC_URI entry defconfig
