meta-digi-arm: add u-boot script to boot from SD card
https://jira.digi.com/browse/DEL-980

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6adpt.conf
+++ b/meta-digi-arm/conf/machine/ccimx6adpt.conf
@@ -9,6 +9,9 @@ KERNEL_DEVICETREE = "imx6-${MACHINE}.dtb imx6-${MACHINE}-ldo.dtb imx6-${MACHINE}
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
+# U-Boot script to be copied to the SD image
+BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
+
 #
 # Partition sizes
 # ---------------
