meta-digi-dey: remove packagegroup-core-x11-sato bbappend
The purpose of this bbappend was just to remove the 'connman-gnome'
network manager that is the default in sato.

This can be done also in the distro config file without the need for a
recipe bbappend.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey-gui.conf
+++ b/meta-digi-dey/conf/distro/dey-gui.conf
@@ -1,3 +1,6 @@
 include dey.conf
 
 DISTRO_FEATURES += "x11"
+
+# Disable network manager (included in packagegroup-core-x11-sato)
+NETWORK_MANAGER = ""
