meta-digi: remove PRINC from recipes and use a local PR server
This cleans following warning:

  Use of PRINC is deprecated.
  The PR server should be used to automatically increment the PR.
  See: https://wiki.yoctoproject.org/wiki/PR_Service

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccardimx28js/local.conf.sample
+++ b/sdk/config/ccardimx28js/local.conf.sample
@@ -258,3 +258,8 @@ ASSUME_PROVIDED += "libsdl-native"
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "1"
+
+#
+# Enable local PR server
+#
+PRSERV_HOST = "localhost:0"
