meta-digi-dey: Change SDK_VERSION to 1.5.1
The 1.5+snapshot.new tag does not work, so until there is an official 1.6
release use the last 1.5.1 SDK.

Fixes https://jira.digi.com/browse/DEL-988

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -4,7 +4,7 @@ DISTRO_VERSION = "1.6.0"
 DISTRO_CODENAME = "next"
 SDK_DISTRO = "poky"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.5+snapshot.new"
+SDK_VERSION := "1.5.1"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
