meta-digi: sync distro config file with upstream (poky)
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,10 +1,10 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded for Yocto"
 DISTRO_VERSION = "1.6.0"
-DISTRO_CODENAME = "next"
+DISTRO_CODENAME = "daisy"
 SDK_DISTRO = "poky"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.5.1"
+SDK_VERSION := "1.6"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -111,10 +111,8 @@ SANITY_TESTED_DISTROS ?= " \
             Poky-1.5 \n \
             Poky-1.6 \n \
             Ubuntu-12.04 \n \
-            Ubuntu-12.10 \n \
-            Ubuntu-13.04 \n \
             Ubuntu-13.10 \n \
-            Fedora-18 \n \
+            Ubuntu-14.04 \n \
             Fedora-19 \n \
             Fedora-20 \n \
             CentOS-6.4 \n \
@@ -126,6 +124,7 @@ SANITY_TESTED_DISTROS ?= " \
             Debian-7.4 \n \
             SUSE-LINUX-12.2 \n \
             openSUSE-project-12.3 \n \
+            openSUSE-project-13.1 \n \
             "
 
 # Default hash policy for distro
