ccimx6sbc: set bluetooth variant by default in config file
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccimx6sbc/local.conf.sample
+++ b/sdk/config/ccimx6sbc/local.conf.sample
@@ -58,7 +58,7 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 #MACHINE ??= "qemux86"
 
 MACHINE = "ccimx6sbc"
-MACHINE_VARIANT = "w"
+MACHINE_VARIANT = "wb"
 
 #
 # Use Digi's internal git repositories
