meta-digi-arm: ccimx6: change default DTS file name
This has changed on the kernel tree.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,7 +5,7 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
-KERNEL_DEVICETREE = "imx6-${MACHINE}.dtb imx6-${MACHINE}-ldo.dtb imx6-${MACHINE}-hdcp.dtb"
+KERNEL_DEVICETREE = "imx6q-${MACHINE}.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
