--- a/meta-digi-arm/recipes-kernel/linux/linux-dey-2.6.35.14/ccardimx28js/config-bluetooth-atheros.cfg
+++ b/meta-digi-arm/recipes-kernel/linux/linux-dey-2.6.35.14/ccardimx28js/config-bluetooth-atheros.cfg
@@ -6,7 +6,10 @@ CONFIG_BT_L2CAP=y
 CONFIG_BT_L2CAP_EXT_FEATURES=y
 CONFIG_BT_SCO=y
 CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_ATH3K=y
-
