--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -97,7 +97,7 @@ ftp://.*/.*      ${DIGI_MIRROR}/ \n \
 http://.*/.*     ${DIGI_MIRROR}/ \n \
 https://.*/.*    ${DIGI_MIRROR}/ \n"
 
-# The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
+# The CONNECTIVITY_CHECK_URI's are used to test whether we can successfully
 # fetch from the network (and warn you if not). To disable the test set
 # the variable to be empty.
 # Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=HEAD
