cherokee: enable SSL/HTTPS support
https://jira.digi.com/browse/DEL-1214

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/recipes-connectivity/cherokee/files/cherokee.conf
+++ b/meta-digi-dey/recipes-connectivity/cherokee/files/cherokee.conf
@@ -1,12 +1,16 @@
 config!version = 001002098
 server!bind!1!port = 80
+server!bind!2!port = 443
+server!bind!2!tls = 1
 server!iocache = 0
+server!ipv6 = 1
 server!keepalive = 1
 server!keepalive_max_requests = 500
 server!panic_action = /usr/bin/cherokee-panic
 server!pid_file = /var/run/cherokee.pid
 server!server_tokens = full
 server!timeout = 15
+server!tls = libssl
 vserver!1!directory_index = index.html
 vserver!1!document_root = /srv/www
 vserver!1!error_writer!filename = /var/log/cherokee.error
@@ -36,6 +40,8 @@ vserver!1!rule!2!match!directory = /icons
 vserver!1!rule!1!handler = common
 vserver!1!rule!1!handler!iocache = 1
 vserver!1!rule!1!match = default
+vserver!1!ssl_certificate_file = /etc/cherokee/ssl/cherokee.pem
+vserver!1!ssl_certificate_key_file = /etc/cherokee/ssl/cherokee.pem
 icons!default = page_white.png
 icons!directory = folder.png
 icons!file!bomb.png = core
