meta-digi-dey: rework dey-image-graphical image to save space
* Remove inconditional inclusion of dey-gstreamer: dey-image-minimal
  includes dey-gstreamer if MACHINE_FEATURES contains 'accel-video'
  so dey-image-graphical inherits this from dey-image-minimal.
  This does not make any difference for IMX platforms but allows to
  remove inconditional inclusion of dey-gstreamer for MXS. To allow
  'gaku' (sato audio player) playing MP3 files COMMERCIAL_AUDIO_PLUGINS
  is added to the distro config file.

* Only include 'owl-video' if MACHINE_FEATURES contains 'accel-video'.

* Remove inconditional inclusion of qt4-examples from dey-qt
  packagegroup. Package qt4-examples is part of the RRECOMMENDS for
  package qt4-demos, so it will be included anyway and not having it
  hard-coded allows to bad-recommend it for some platforms and not
  for others.

* Use BAD_RECOMMENDATIONS to avoid inclusion of 'qt4-demos-doc' package
  for all platforms (this package does not add any value and weights
  about 50MB) and 'qt4-examples' for ccardimx28js.

With all those changes, we get a graphical image with GTK + QT that fits
in the standard rootfs partition for ccardimx28js.

https://jira.digi.com/browse/DEL-1164

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -71,6 +71,9 @@ TCLIBCAPPEND = ""
 QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
 # Other QEMU_TARGETS "mips64 mips64el sh4"
 
+# Support MP3 audio files
+COMMERCIAL_AUDIO_PLUGINS ?= "gst-plugins-ugly-mad gst-plugins-ugly-mpegaudioparse"
+
 # Some packages like gst-plugins-ugly need this
 LICENSE_FLAGS_WHITELIST += "commercial"
 
