--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -20,8 +20,7 @@ POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
-# Remove X-related features for DEY distro
-DISTRO_FEATURES_DEFAULT_remove = "x11"
+# Remove 'wayland' feature from DEY distro
 POKY_DEFAULT_DISTRO_FEATURES_remove = "wayland"
 
 # DEY image features (alphabetical order)
