meta-digi-dey: remove poky references from DEY distro
We used to have these poky references to make 'adt-installer' happy when
built using DISTRO=dey.

But this has side effects on the standalone toolchain created with
'populate_sdk'. The standalone toolchain installer has:

* default install path referring to poky instead of dey
* default toolchain version not matching our DEY version

This is misleading for customers, so rework the distro config file
prioritizing the standalone toolchain over the adt-installer.

https://jira.digi.com/browse/DEL-1003

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -2,9 +2,8 @@ DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded for Yocto"
 DISTRO_VERSION = "1.6.2"
 DISTRO_CODENAME = "daisy"
-SDK_DISTRO = "poky"
-SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.6"
+SDK_VENDOR = "-deysdk"
+SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -51,7 +50,7 @@ PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.14%"
 PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.14%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
-SDKPATH = "/opt/${SDK_DISTRO}/${SDK_VERSION}"
+SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
 EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 
