meta-digi-arm: update github account
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -23,7 +23,7 @@ DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
 DIGI_MIRROR  ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
-DIGI_GITHUB_GIT ?= "git://github.com/dgii"
+DIGI_GITHUB_GIT ?= "git://github.com/digidotcom"
 
 # Accept FSL licenses
 ACCEPT_FSL_EULA = "1"
