meta-digi: update config templates for yocto 1.7
Added 'meta-python' to bblayers.conf.sample as it's now a dependence of
'networking-layer'. Otherwise if fails with:

ERROR: Layer 'networking-layer' depends on layer 'meta-python', but this
layer is not enabled in your configuration

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccardimx28js/bblayers.conf.sample
+++ b/sdk/config/ccardimx28js/bblayers.conf.sample
@@ -10,6 +10,7 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-yocto \
   ##OEROOT##/meta-yocto-bsp \
   ##DIGIBASE##/meta-openembedded/meta-oe \
+  ##DIGIBASE##/meta-openembedded/meta-python \
   ##DIGIBASE##/meta-openembedded/meta-networking \
   ##DIGIBASE##/meta-openembedded/meta-webserver \
   ##DIGIBASE##/meta-fsl-arm \
