--- a/sdk/config/ccimx6sbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6sbc/bblayers.conf.sample
@@ -10,6 +10,7 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-yocto \
   ##OEROOT##/meta-yocto-bsp \
   ##DIGIBASE##/meta-openembedded/meta-oe \
+  ##DIGIBASE##/meta-openembedded/meta-python \
   ##DIGIBASE##/meta-openembedded/meta-networking \
   ##DIGIBASE##/meta-openembedded/meta-webserver \
   ##DIGIBASE##/meta-fsl-arm \
