meta-digi-arm: Move images types to machine configuration.
This allows to override it easily.

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6adpt.conf
+++ b/meta-digi-arm/conf/machine/ccimx6adpt.conf
@@ -19,3 +19,5 @@ BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
 # system: 512 MiB
 #
 BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
+
+IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2"
